archive/results/planner/phase-02/tests/vitest-output.txt

[1m[30m[46m RUN [49m[39m[22m [36mv4.1.9 [39m[90mD:/oandO04072026/site[39m

 [31mΓ¥»[39m tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts [2m([22m[2m34 tests[22m[2m | [22m[31m8 failed[39m[2m)[22m[32m 27[2mms[22m[39m
     [32mΓ£ô[39m pinned schema version is 2026-07-04.v2 literal[32m 1[2mms[22m[39m
     [32mΓ£ô[39m constant variants tuple exposes fixed/configurable/parametric[32m 1[2mms[22m[39m
     [32mΓ£ô[39m slug regex anchors `^[a-z][a-z0-9-]{1,63}$`[32m 0[2mms[22m[39m
     [32mΓ£ô[39m Open3dDescriptorErrorKindSchema enumerates the four canonical kinds[32m 0[2mms[22m[39m
     [32mΓ£ô[39m MountPlaneSchema enum matches placement contract (floor|wall|ceiling|floating)[32m 0[2mms[22m[39m
     [32mΓ£ô[39m canonicalize yields identical fingerprints for key-order-nonsensitive input[32m 1[2mms[22m[39m
[31m     [31m├ù[31m parses a fixed descriptor into a typed value[39m[32m 9[2mms[22m[39m
[31m     [31m├ù[31m parses a configurable descriptor with sizeOptions[39m[32m 2[2mms[22m[39m
[31m     [31m├ù[31m parses a parametric descriptor with parameterSchema and mountingPoints[39m[32m 2[2mms[22m[39m
     [32mΓ£ô[39m rejects #hex literal theme cartography values (┬º02-CAT-07)[32m 1[2mms[22m[39m
     [32mΓ£ô[39m rejects theme cartography keys that are not currentColor or --kebab[32m 1[2mms[22m[39m
     [32mΓ£ô[39m rejects malformed slug[32m 0[2mms[22m[39m
     [32mΓ£ô[39m rejects invalid UUID v4 id[32m 0[2mms[22m[39m
     [32mΓ£ô[39m rejects non-positive geometry number[32m 0[2mms[22m[39m
     [32mΓ£ô[39m rejects parametric without mountingPoints[32m 0[2mms[22m[39m
     [32mΓ£ô[39m rejects empty object (┬º02-TEST-02 empty parse)[32m 0[2mms[22m[39m
     [32mΓ£ô[39m rejects non-object input[32m 0[2mms[22m[39m
     [32mΓ£ô[39m rejects null and undefined inputs[32m 0[2mms[22m[39m
     [32mΓ£ô[39m emits versionMismatch when schemaVersion is below pinned[32m 0[2mms[22m[39m
     [32mΓ£ô[39m emits hashMismatch when checksum does not match recomputed digest[32m 0[2mms[22m[39m
[31m     [31m├ù[31m emits hashMismatch when generatedAt is mutated after first write (┬º02-CAT-11 annex)[39m[32m 1[2mms[22m[39m
[31m     [31m├ù[31m parsing the same descriptor twice yields identical value + fingerprint[39m[32m 1[2mms[22m[39m
[31m     [31m├ù[31m freezeFreshDescriptor stamps generatedAt exactly once per input[39m[32m 0[2mms[22m[39m
[31m     [31m├ù[31m freezeFreshDescriptor does not overwrite an existing generatedAt[39m[32m 0[2mms[22m[39m
     [32mΓ£ô[39m freezeFreshDescriptor refuses hex theme tokens (#hex literal blocklist)[32m 0[2mms[22m[39m
     [32mΓ£ô[39m BLOCK_DESCRIPTOR_VARIANTS tuple keeps the discriminated union closed[32m 0[2mms[22m[39m
[31m     [31m├ù[31m consumer-side exhaustive switch compiles for the BlockDescriptor union[39m[32m 0[2mms[22m[39m
     [32mΓ£ô[39m invalid ΓåÆ 422.invalid[32m 0[2mms[22m[39m
     [32mΓ£ô[39m versionMismatch ΓåÆ 422.version_mismatch[32m 0[2mms[22m[39m
     [32mΓ£ô[39m hashMismatch ΓåÆ 409.hash_mismatch[32m 0[2mms[22m[39m
     [32mΓ£ô[39m notFound ΓåÆ 404.not_found[32m 0[2mms[22m[39m
     [32mΓ£ô[39m preserves sticky error-code suffix so retry semantics are distinct[32m 0[2mms[22m[39m
     [32mΓ£ô[39m BlockDescriptorSchema.safeParse succeeds across the three variant tags[32m 0[2mms[22m[39m
     [32mΓ£ô[39m BlockDescriptorSchema.safeParse fails on an unknown variant tag[32m 0[2mms[22m[39m
 [31mΓ¥»[39m tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts [2m([22m[2m17 tests[22m[2m | [22m[31m7 failed[39m[2m)[22m[32m 31[2mms[22m[39m
[31m     [31m├ù[31m tryLoad returns a typed descriptor on a fresh fixture file[39m[32m 9[2mms[22m[39m
     [32mΓ£ô[39m tryLoad emits notFound when the JSON file is missing[32m 2[2mms[22m[39m
     [32mΓ£ô[39m tryLoad emits invalid when the JSON file body is malformed[32m 3[2mms[22m[39m
     [32mΓ£ô[39m tryLoad rejects slugs that don't match the kebab regex (defensive early)[32m 1[2mms[22m[39m
     [32mΓ£ô[39m tryLoad rejects slugs that contain path-traversal characters[32m 1[2mms[22m[39m
     [32mΓ£ô[39m tryLoad rejects slugs with absolute paths[32m 1[2mms[22m[39m
     [32mΓ£ô[39m tryLoad rejects injected path components[32m 1[2mms[22m[39m
     [32mΓ£ô[39m tryLoad rejects a non-`.json` extension[32m 2[2mms[22m[39m
[31m     [31m├ù[31m tryLoad surfaces hashMismatch when the on-disk body is mutated after first write[39m[32m 1[2mms[22m[39m
[31m     [31m├ù[31m tryLoad surfaces versionMismatch when the schemaVersion does not match the pinned literal[39m[32m 1[2mms[22m[39m
     [32mΓ£ô[39m loadBySlug throws with HTTP-shape prefix when the descriptor cannot be loaded[32m 2[2mms[22m[39m
[31m     [31m├ù[31m loadBySlug returns the typed descriptor when present[39m[32m 1[2mms[22m[39m
     [32mΓ£ô[39m loadAll returns empty array when the directory does not exist[32m 1[2mms[22m[39m
[31m     [31m├ù[31m loadAll reads every .json file in the directory, skips malformed entries[39m[32m 1[2mms[22m[39m
[31m     [31m├ù[31m loadAll caches results for repeat reads within the same directory[39m[32m 1[2mms[22m[39m
[31m     [31m├ù[31m clearLoaderCache forces a fresh read on the next loadAll[39m[32m 1[2mms[22m[39m
     [32mΓ£ô[39m Open3dDescriptorError union covers all four canonical kinds[32m 1[2mms[22m[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 15 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: structural validation > parses a fixed descriptor into a typed value
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:148:23
    146|     const input = withChecksum({ ...fixedDescriptor() });
    147|     const result = parseBlockDescriptor(input);
    148|     expect(result.ok).toBe(true);
       |                       ^
    149|     if (result.ok) {
    150|       expect(result.value.variant).toBe("fixed");

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: structural validation > parses a configurable descriptor with sizeOptions
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:160:23
    158|     const input = withChecksum(configurableDescriptor());
    159|     const result = parseBlockDescriptor(input);
    160|     expect(result.ok).toBe(true);
       |                       ^
    161|     if (result.ok) {
    162|       expect(result.value.variant).toBe("configurable");

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: structural validation > parses a parametric descriptor with parameterSchema and mountingPoints
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:173:23
    171|     const input = withChecksum(parametricDescriptor());
    172|     const result = parseBlockDescriptor(input);
    173|     expect(result.ok).toBe(true);
       |                       ^
    174|     if (result.ok) {
    175|       expect(result.value.variant).toBe("parametric");

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[3/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: version + checksum guards > emits hashMismatch when generatedAt is mutated after first write (┬º02-CAT-11 annex)
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:299:27
    297|     // First-write path stamps generatedAt and computes checksum.
    298|     const firstFresh = freezeFreshDescriptor(fixedDescriptor(), () => ΓÇª
    299|     expect(firstFresh.ok).toBe(true);
       |                           ^
    300|     if (!firstFresh.ok) throw new Error("first freeze failed");
    301|

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[4/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: idempotent replay > parsing the same descriptor twice yields identical value + fingerprint
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:321:24
    319|     const resultA = parseBlockDescriptor(input);
    320|     const resultB = parseBlockDescriptor(input);
    321|     expect(resultA.ok).toBe(true);
       |                        ^
    322|     expect(resultB.ok).toBe(true);
    323|     if (resultA.ok && resultB.ok) {

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[5/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: idempotent replay > freezeFreshDescriptor stamps generatedAt exactly once per input
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:331:24
    329|   it("freezeFreshDescriptor stamps generatedAt exactly once per input"ΓÇª
    330|     const stamped = freezeFreshDescriptor(fixedDescriptor(), () => 170ΓÇª
    331|     expect(stamped.ok).toBe(true);
       |                        ^
    332|     if (!stamped.ok) return;
    333|     expect(stamped.value.generatedAt).toBe(1700000000);

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[6/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: idempotent replay > freezeFreshDescriptor does not overwrite an existing generatedAt
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:340:24
    338|     const preset = { ...fixedDescriptor(), generatedAt: 1600000000 };
    339|     const stamped = freezeFreshDescriptor(preset, () => 1800000000);
    340|     expect(stamped.ok).toBe(true);
       |                        ^
    341|     if (!stamped.ok) return;
    342|     expect(stamped.value.generatedAt).toBe(1600000000); // preserved, ΓÇª

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[7/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts > 02-BLOCK-DESCRIPTOR: variant exhaustiveness > consumer-side exhaustive switch compiles for the BlockDescriptor union
AssertionError: expected false to be true // Object.is equality

- Expected
+ Received

- true
+ false

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts:374:23
    372|   it("consumer-side exhaustive switch compiles for the BlockDescriptorΓÇª
    373|     const result = parseBlockDescriptor(withChecksum(fixedDescriptor()ΓÇª
    374|     expect(result.ok).toBe(true);
       |                       ^
    375|     if (!result.ok) return;
    376|     const tag: string = result.value.variant;

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[8/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > tryLoad returns a typed descriptor on a fresh fixture file
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24
     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:88:24

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[9/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > tryLoad surfaces hashMismatch when the on-disk body is mutated after first write
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24
     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:161:24

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[10/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > tryLoad surfaces versionMismatch when the schemaVersion does not match the pinned literal
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24
     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:178:24

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[11/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > loadBySlug returns the typed descriptor when present
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24
     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:200:24

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[12/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > loadAll reads every .json file in the directory, skips malformed entries
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24

     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
[2m Test Files [22m [1m[31m2 failed[39m[22m[90m (2)[39m
[2m      Tests [22m [1m[31m15 failed[39m[22m[2m | [22m[1m[32m36 passed[39m[22m[90m (51)[39m
[2m   Start at [22m 17:40:13
[2m   Duration [22m 2.08s[2m (transform 216ms, setup 1.47s, import 322ms, tests 58ms, environment 1.64s)[22m

 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:215:20

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[13/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > loadAll caches results for repeat reads within the same directory
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24
     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:249:20

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[14/15]ΓÄ»

 FAIL  tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts > 02-LOADER: storage boundary > clearLoaderCache forces a fresh read on the next loadAll
Error: fixture freeze failed
 Γ¥» freezeWithChecksum tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:66:24
     64|     () => seed,
     65|   );
     66|   if (!fresh.ok) throw new Error("fixture freeze failed");
       |                        ^
     67|   return fresh.value;
     68| }
 Γ¥» tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts:261:20

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[15/15]ΓÄ»

JSON report written to D:/oandO04072026/results/tests/vitest-site-results.json
undefined
D:\oandO04072026\site:
[ERR_PNPM_RECURSIVE_EXEC_FIRST_FAIL] Command failed with exit code 1: vitest run tests/unit/features/planner/open3d/catalog/blockDescriptor.test.ts tests/unit/features/planner/open3d/catalog/blockDescriptorLoader.test.ts --config vitest.site.config.ts
